force-app/main/default/objects/ErrorLog__c/ErrorLog__c.object-meta.xml
<CustomObject>
    <description>Log of an Error on the Salesforce Platform</description>
    <label>Error Log</label>
    <nameField>
        <displayFormat>EL-{0000}-{YYYY}.{MM}.{DD}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>