force-app/main/default/objects/ErrorLog__c/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <description>The name of the Apex Class where the error occurred.</description>
    <label>Apex Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>