force-app/main/default/objects/ErrorLog__c/fields/PageName__c.field-meta.xml
<CustomField>
    <fullName>PageName__c</fullName>
    <description>The Page the error occurred on. This may be a Visualforce page or a Lightning Page.</description>
    <label>Page Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>