force-app/main/default/objects/ErrorLog__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <description>A Related Salesforce Record ID</description>
    <label>Related Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>